fixed spacing issues

--- a/index.css
+++ b/index.css
@@ -8,8 +8,6 @@
 }
 *{
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
 }
 body {
     background: linear-gradient(to right, #4F4F51, #2C2B30);
@@ -19,7 +17,7 @@ body {
     align-items: center;
     min-height: 100vh;
     width: 100%;
-    overflow-x: hidden;
+
 }
 .sticky-header {
     height: 100%;
